Created a new branch to address bugs

--- a/index.html
+++ b/index.html
@@ -39,20 +39,14 @@
                         <input type="text" class="searchbar-input form-control">
 
                         <!-- Search button -->
-                        <div >
+                        <span class="input-group-btn">
                             <button class="search-button btn btn-primary" type="submit">
                                 <i class="fa fa-search"></i>
                             </button>
-                        </div>
-                        <br>
-                        <br>
-                        <br>
-                        <form class="history-content"></form>
+                        </span>
+                                                  
                     </div>
-
-                    
-
-
+                    <form class="history-content"></form>                    
                 </div>
             </div>
 
