--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <!-- Search for City -->
-    <div class="row">
+    <div class="row mobile-sizing">
         <div class="col-4">
             
             <!-- Wrapped content in a card -->
@@ -121,7 +121,7 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="Assets/javascript/script.js"></script>
+    <script src="assets/javascript/script.js"></script>
 </body>
 
 </html>
